# docassemble-MOHUDEvictionProject

./: LICENSE  MANIFEST.in  README.md  pull_request_template.md  pyproject.toml  setup.py
.github/workflows/: run_form_tests.yml
docassemble/EvictionMotionToContinue/data/questions/: eviction_motion_to_continue.yml
docassemble/MOHUDEvictionProject/: defenses.py  discovery.py  mo_intake.py  test_defenses.py
docassemble/MOHUDEvictionProject/data/questions/: MOHUDEvictionProject.yml  MOHUDMotionToContinue.yml  ai_intake.yml  al_reminders.yml  autoterms.yml  court_information.yml  defense_logic.yml  discovery.yml  eviction_motion_to_continue.yml  feedback.yml  file_a_motion.yml  information_collected.yml  intake.yml  intake_demo.yml  legalaidlocator.yml  letter_to_request_repairs.yml  motion_tester.yml  questions_draft.yml  reminder.yml  review.yml  shared.yml
docassemble/MOHUDEvictionProject/data/sources/: AutomatedTests.feature  MOHUDEvictionProject_es.xlsx  document_requests.yml  intake_sources.yml  interrogatories.yml  interviews_run.feature  placeholder_intake_criteria.yml  test.feature
docassemble/MOHUDEvictionProject/data/static/: buttonFunction.js  buttons.css  custom.css  lsem.bootstrap.css  motenanthelp.bootstrap.css  motenanthelp.bootstrap.scss
docassemble/MOHUDEvictionProject/data/templates/: Discovery.docx  MTD_MDS.docx  answer_defenses.docx  eviction_helper_next_steps.docx  file_a_motion_helper_next_steps.docx  include_caption.docx  include_signature.docx  letter_to_request_repairs.docx  motionToContinue.docx  motion_for_leave_to_file.docx  (+8 more)
(+2 files in other folders)
